<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_margin="35dp">

        <TextView
            android:id="@+id/cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cv"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="85dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv"
            android:layout_marginTop="32dp"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#7b7b7b"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv1"
            android:layout_marginTop="42dp"
            android:layout_marginHorizontal="16dp"/>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#7b7b7b"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            app:layout_constraintTop_toBottomOf="@id/view"
            android:layout_marginTop="42dp"
            android:layout_marginHorizontal="16dp"/>

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            app:layout_constraintTop_toBottomOf="@id/view1"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="36dp"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/view2"
            android:layout_width="66dp"
            android:layout_height="2dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="88dp"
            android:background="#7b7b7b"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc"
            app:layout_goneMarginLeft="66dp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            app:layout_constraintTop_toBottomOf="@id/view2"
            app:layout_constraintStart_toStartOf="@id/view2"/>

        <View
            android:id="@+id/view3"
            android:layout_width="66dp"
            android:layout_height="2dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="88dp"
            android:background="#7b7b7b"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc"
            app:layout_goneMarginLeft="66dp" />

        <TextView
            android:id="@+id/tvPOd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/podp"
            app:layout_constraintTop_toBottomOf="@id/view3"
            app:layout_constraintStart_toStartOf="@id/view3"/>

        <androidx.cardview.widget.CardView
            app:layout_constraintStart_toStartOf="@id/tvDate"
            app:layout_constraintTop_toBottomOf="@id/tvDate"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:elevation="12dp"
            app:cardCornerRadius="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9">
            <ImageView
                android:layout_height="80dp"
                android:layout_width="match_parent"
                android:id="@+id/imageView1"
                android:src="@drawable/icon"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">
            </ImageView>
        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/view4"
            android:layout_width="66dp"
            android:layout_height="2dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="88dp"
            android:background="#7b7b7b"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPOd"
            app:layout_goneMarginLeft="66dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            app:layout_constraintTop_toBottomOf="@id/view4"
            app:layout_constraintStart_toStartOf="@id/view4"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>